# math_lib_hao

./: CMakeLists.txt  Makefile  README
inc/: CMakeLists.txt  brents_fun.h  math_container.h  simple_fun.h  sort_indexes.h
src/: CMakeLists.txt  brents_fun.cpp  math_container.cpp  simple_fun.cpp
test/: CMakeLists.txt  brents_fun_test.cpp  math_container_test.cpp  simple_fun_test.cpp  sort_fun_test.cpp  sort_indexes_test.cpp  test_all.cpp
